swagger custom url
custom domain, multiple auth

fix script
