# src/app/Http/Controllers/Admin/Swagger/Controller.php
@@ -10,9 +10,13 @@ namespace App\Http\Controllers\Admin\Swagger;
  * @OA\Server(url="https://unstable.aws.bmlt.app/main_server", description="BMLT Admin API Unstable Server")
  * @OA\Server(url="https://gyro.sezf.org/main_server", description="BMLT Admin API Gyro Server")
  * @OA\Server(url="http://localhost:8000/main_server", description="BMLT Admin API Local Server")
- * @OA\SecurityScheme(securityScheme="bearerAuth", type="oauth2",
+ * @OA\Server(url="https://{domain}", description="BMLT Admin API Custom Server",
+ *     @OA\ServerVariable(serverVariable="domain", default="")
+ * )
+ * @OA\SecurityScheme(securityScheme="oauth2", type="oauth2",
  *     @OA\Flow(flow="password", tokenUrl="main_server/api/v1/auth/token", refreshUrl="main_server/api/v1/auth/refresh", scopes={})
  * )
+ * @OA\SecurityScheme(securityScheme="bearerAuth", type="http", scheme="bearer")
  */
 class Controller
 {
